Installed bootstrap and styled nav area.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
-<h1>About Blocitoff</h1>
-<p>Created by NPL</p>
+</br>
+<div class="jumbotron">
+  <div class="container">
+    <center>
+      <h1>Blocitoff</h1>
+            
+    </center>
+  </div>
+</div>
