--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<h1>About Blocitoff</h1>
+<p>Blocitoff is a to-do-list web application that automatically deletes items from your lists after 7 days.
