--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Blocitoff</title>
-     <%= stylesheet_link_tag    "application", media: "all" %>
-     <%= javascript_include_tag "application" %>
-     <%= csrf_meta_tags %>
-  </head>
-  <body>
-    <div class="container">
-      <ul class="nav nav-tabs">
-        <li><%= link_to "Blocitoff", welcome_index_path %></li>
-        <li><%= link_to "About", welcome_about_path %></li>
+<head>
+  <title>Blocitoff</title>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+  <div class="container">
+     <ul class="nav nav-tabs">
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "About", about_path %></li>
+        <% if current_user %>
+          <li><%= link_to "My Lists", lists_path %></li>
+        <% end %>
+
+        <div class="pull-right user-info">
+           <% if current_user %>
+             Hello <%= current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+           <% else %>
+             <%= link_to "Sign In", new_user_session_path %> or 
+             <%= link_to "Sign Up", new_user_registration_path %>
+           <% end %>
+        </div>
+
       </ul>
 
-      <%= yield %>
-    </div>
+    <% if flash[:notice] %>
+      <div class="alert alert-success">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:notice] %>
+      </div>
+    <% elsif flash[:error] %>
+      <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:error] %>
+      </div>
+    <% elsif flash[:alert] %>
+      <div class="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
 
-  </body>
+  <%= yield %>
+</div>
+</body>
 </html>
+
