--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Lists#new</h1>
-<p>Find me in app/views/lists/new.html.erb</p>
+<%= form_for @list do |f| %>
+  <%= f.label :list_title %>
+  <%= f.text_field :title %>
+  <%= f.submit "Save" %>
+<% end %>
