Tweaked app/views/lists/new.html.erb

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,7 @@
 <%= form_for @list do |f| %>
-  <%= f.label :list_title %>
+  <br>
+  <%= f.label :name_your_list_here %>
+  <br>
   <%= f.text_field :title %>
   <%= f.submit "Save" %>
 <% end %>
