--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container-fluid'>
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h1><center><%= @list.name %></center></h1>
+      <h1><center><%= @list.title %></center></h1>
     </div>
   </div>
 
