--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,7 @@
 <%= link_to "Create a New List", new_list_path, class: 'btn btn-success' %>
 <% @lists.each do |list| %>
   <h3>
-    <%= link_to list.title, list %> </br>
+    <%= link_to list.title, list %> <%= link_to  "Delete", list, method: :delete,  data: { confirm: 'Are you sure you want to delete this list?'}, class: 'btn btn-danger' %></br>
   </h3>
 <% end %>
 
